virt01/manual/torrent/testing/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr-svc
  labels:
    app: tdarr
spec:
  ports:
    - port: 8265
      protocol: TCP
      name: tdarr-ui
    - port: 8266
      protocol: TCP
      name: tdarr-server
  selector:
    app: tdarr
